# evtx-cli

./: .gitmodules  Cargo.toml  README.md
assets/: example_rule.json
src/: main.rs
