[package]
authors = ["dolly-parseton <dolly-parseton@gmail.com>"]
edition = "2018"
name = "evtx-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtx = "0.6.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = {version = "0.3", default-features = false}

# tantivy = "0.14.0"
gjson = "0.8.0"

afrs = {git = "https://github.com/dolly-parseton/AFRS.git", branch = "main"}
